Bug fix:  Making dropdown positioning consistent
.dropdown-menu items within .btn-group or .input-group-btn are
positioned so that they dropdown overlaps the item used to open the
dropdown.  .dropdown-menu items within .dropdown didn’t get this same
visual tweak.  this fixes that.

--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -88,7 +88,7 @@
 }
 
 // Position Menu closer to button
-.btn-group, .input-group-btn {
+.btn-group, .dropdown, .input-group-btn {
   > .dropdown-menu {
     margin-top: -1px;
   }
